# CogniWeave

./: .gitignore
.github/workflows/: publish.yml
backend/: $null  README.md  __init__.py  package-lock.json  pyproject.toml
backend/automation/: .env.example  __init__.py  automation_runner.py  chat.py  config.py  llm_client.py  main.py  requirements.txt  server.py
extension/: background.js  content.js  dashboard.html  dashboard.js  manifest.json  popup.html  popup.js
extension/src/background/: background.js
extension/src/content/: content.js
extension/src/ui/: dashboard.html  dashboard.js  settings.js
website/: package-lock.json
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/components/: CTA.tsx  Demo.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx
