[project]
name = "autopattern-backend"
version = "0.2.0"
description = "Backend services for AutoPattern - workflow to automation pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.1.0",
    "openai>=1.0.0",
    "langchain-openai>=0.1.0",
    "langchain-google-genai>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.27.0",
]

[project.scripts]
autopattern = "automation.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["automation"]
